src/style.css
/* CSS Reset */

/* Box-sizing border-box for all elements */
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* Remove margin and padding for all elements */
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
    margin: 0;
    padding: 0;
}

/* Set default font styles */
body {
    font-family: Arial, sans-serif;
    font-size: 16px;
    line-height: 1.5;
}

/* Remove list styles */
ol,
ul {
    list-style: none;
}

/* Remove underline from links */
a {
    text-decoration: none;
}

/* Reset form elements */
button,
input,
select,
textarea {
    margin: 0;
    padding: 0;
    border: none;
    font: inherit;
    color: inherit;
    background-color: transparent;
    vertical-align: middle;
    outline: none;
    appearance: none;
}

/* Set a default width for images */
img {
    max-width: 100%;
    height: auto;
}

/* Additional Reset Styles */

/* Optionally add your own custom reset styles here */

/* End of CSS Reset */

.parent {
    display: grid;
    align-items: center;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    }
    
    .div1 { 
        grid-area: 1 / 1 / 3 / 2; 
        font-size: 3rem;
    }
    .div2 { grid-area: 1 / 2 / 2 / 3; }
    .div3 { grid-area: 2 / 2 / 3 / 3; }


body {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    background-image: url('../public/3028327.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.jokeBox{
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.acudit-title{
    margin-top: 30px;
}

.weather{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    position: fixed;
    /* left: 0; */
    top: calc(20px + env(safe-area-inset-bottom));
    width: 225px;
    height: 100px;
    padding: 25px 15px;
    margin-left: 10px;
    background: rgba(255, 255, 255, .4);
    backdrop-filter: blur(10px);
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 8px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    font-size: x-large;

    overflow: visible;
    position: relative;
}

.matchbox {
    position: absolute;
    top: 0;
    right: 0;
    width: 250px;
    height: auto;
    transition: transform 0.3s ease-in-out;
    perspective: 1000px; /* Add perspective to enable 3D transform */
}

.weather:hover .matchbox {
    transform: translateX(105%); /* Adjust the translation distance as needed */
}

.inner-box {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: -100%; /* Position the inner box outside the outer box to the right */
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    transition: right 0.3s ease-in-out;
    transform-origin: right center;
}

.weather:hover .inner-box {
    right: 0; /* Slide the inner box to the right inside the outer box */
}

.weather-data {
    position: relative;
    width: 100%;
    height: auto;
    padding: 20px;
    background: rgba(255, 255, 255, .4);
    backdrop-filter: blur(100px);
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 8px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
    display: flex;
    gap: 20px;
    font-size: 1rem;
}

.weather:hover .weather-data {
    opacity: 1;
}

@media (hover: hover) {
    .weather:hover .weather-data {
        opacity: 1;
    }
}

@media (hover: none) {
    .weather .weather-data {
        opacity: 0;
    }

    .weather .weather-data.show {
        opacity: 1;
    }
}

.acudits {
    width: 40vw;
    height: auto;
    background-color: #fff;
    border: 1px solid rgba(0, 123, 255, 0.5);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
    gap: 10px;
    
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    background: rgba(255, 255, 255, 0.8);
    backdrop-filter: blur(10px);
}


.typewrite {
    width: auto;
    height: 100px;
    margin: 50px 100px;
    display: none;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    font-size: larger;
}

.acudit-btn {
    display: inline-block;
    padding: 12px 24px;
    font-size: 16px;
    font-weight: bold;
    text-align: center;
    text-decoration: none;
    border-radius: 8px;
    background-color: rgb(0, 123, 255);
    color: #ffffff;
    border: none;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    transition: background-color 0.3s ease, transform 0.3s ease;
    margin-bottom: 30px;
}

.acudit-btn:hover {
    background-color: #0056b3;
    transform: translateY(-2px);
}

.acudit-btn:active {
    background-color: #00397a;
    transform: translateY(1px);
}

.attribution {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    /* left: 0; */
    bottom: calc(20px + env(safe-area-inset-bottom));
    width: 20vw;
    height: 30px;
    background: rgba(255, 255, 255, .4);
    backdrop-filter: blur(10px);
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 8px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.attribution > a{
    margin-right: 5px;
}

.jokeRating{
    display: none;
    gap: 20px;
    font-size: 3rem;
}

